RegressionTests/TestSuiteExport/reject/return_outside_function.blade
// EXPECT: fail
// DIAGNOSTICS: E0213

cog task main() {
    return 1;
}